--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 # Created by .ignore support plugin (hsz.mobi)
 .gradle
 .idea
-application-google.properties
-application-oauth.properties
+appplication-oauth.properties
